# ginger-releaser

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.sh  build_setup.sh  docker-compose.yml  installer.sh  metadata.toml  release_notes.md  releaser.toml  services.toml
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
src/: bump.rs  init.rs  main.rs  references.rs  release_notes.rs  snapshot.rs  utils.rs
test_files/: Cargo.toml  __init__.py  package.json
