[package]
edition = "2021"
name = "ginger-releaser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.7", features = ["derive"]}
git2 = {version = "0.18.1"}
serde = {version = "1.0.166", features = ["derive"]}
toml = {version = "0.8.2"}
