[package]
edition = "2021"
name = "ginger-releaser"
version = "8.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = {version = "4.5.7", features = ["derive"]}
git2 = {version = "0.18.1"}
inquire = {version = "0.6.2", features = ["date"]}
regex = "1.10.5"
serde = {version = "1.0.166", features = ["derive"]}
serde_json = "1.0"
toml = {version = "0.8.2"}
