[package]
description = "releaser cli"
edition = "2021"
name = "ginger-releaser"
version = "8.23.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = {version = "4.5.7", features = ["derive"]}
ginger-shared-rs = {version = "0.20.0-nightly.0", organization = "ginger-society"}
inquire = {version = "0.6.2", features = ["date", "editor"]}
regex = "1.10.5"
serde = {version = "1.0.166", features = ["derive"]}
serde_json = "1.0"
toml = {version = "0.8.2"}

[target.'cfg(all(target_arch = "x86_64", not(target_os = "linux")))'.dependencies]
git2 = {version = "0.19.0", features = ["vendored-openssl"]}

[target.'cfg(any(target_arch = "aarch64", target_os = "linux", not(target_arch = "x86_64")))'.dependencies]
git2 = "0.19.0"

[package.metadata]
organization = "ginger-society"
